--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -57,7 +57,8 @@
                 <li><a href="#antisdk">Anti-SDKer Hell</a></li>
                     <ul><li><a href="#antisdk-a">A. Why They Are An Issue</a></li>
                     <li><a href="#antisdk-b">B. What They Do To SDK</a></li>
-                    <li><a href="#antisdk-c">C. Memes Of SDKcord</a></li></ul>
+                    <li><a href="#antisdk-c">C. Memes Of SDKcord</a></li>
+                    <li><a href="#antisdk-d">D. Why They Are Usually Harmless</a></li></ul>
                 </ul>
                 <hr>
                 <h2 id="intro">Introduction</h2>
@@ -145,13 +146,35 @@
                 <br><br>
                 Ironically, they still have accounts in a lot of cases and they still use the website. They complain Paint has "*insert current thing* rehtoric" usually, otherwise its even more non-sensical. I can name several people who complain about Paint, do nothing to actually try to achieve what they want, yet still won't just quit such as Yeuron and Thi500, but that is besides the point as we are here simply to laugh at their foolishness.
                 <h4 id="antisdk-c">C. Memes Of SDKcord</h4>
-                yaynikki gets a bad dream:<br>
+                Yaynikki Gets A Bad Dream:<br>
                 <img src="/assets/misc/makepaintgreatagain/antisdk-c_1" alt="yaynikki on 11/29/2023 at 3:36AM - he's personally affected me to the point where, last night, i had a dream where i lose my admin priviledges (I presume due to lack of activity compared to other admins; I didn't find out for sure) and the first thing i discovered was a blog approved by another admin by dc that he was celebrating my demotion" title="yaynikki becomes 3 years old"><br>
                 *privileges<br>
                 How do you even get to this level-
                 <br><br>
-                Thi500 (aka AaronAstro) complains about evil homophobia:<br>
-                <img src
+                AaronAstro/Thi500 Complains About "Right Wing Rhetoric":<br>
+                <img src="/assets/misc/makepaintgreatagain/antisdk-c_2.png" alt="Not even gonna bother alt-texting this, but basically AaronAstro complains about homophobia, transphobia, and RW-rhetoric being allegedly on Paint." title="Aaron loses all awareness of 3DSPaint"><br>
+                Is the "homophobia", "transphobia", and "right wing rhetoric" in the room with us right now?<br>
+                Seriously though, almost every active member is LGBT, you aren't getting shit by "making the site less homophobic". Name an actually active member that isn't LGBT or mostly chill with LGBT people that isn't literally banned on sight by admins (you can only name like 3 people, all of which are banned and only 2 of which have came back under alt accounts). Your entire argument is either based on deluding yourself to the point of insanity, or based off sources that probably aren't even from SDK itself. And no, one minor incident doesn't represent the entire site so don't even try that bullshit.
+                <br><br>
+                Yeuron Mad At The Basedness Of TDK:<br>
+                <img src="/assets/misc/makepaintgreatagain/antisdk-c_3.png" alt="Yeuron on 8/26/2023 at 3:29PM states - They should just take down the site at this point ... DC has ruined it" title="Yeuron Thinks I Ruined Paint"><br>
+                I would love to actually see anyway I made SDK worse, because all I am seeing is improvement. The site was basically dead back when I joined, now we're at the top. I'm doing what y'all claimed you wanted on 3DSPaint, but failed to do. I'm you, but better. If Yeuron thinks I ruined SDK and the site should just be taken down, by all means I believe he should delete his account. He said he would do it once in 2022, but he pussied out and didn't do it. Its easy y'know, the option is there. You aren't in either of the TDK groups, you serve no purpose.
+                <br><br>
+                There are probably plenty more of examples both newer and older, but I'd prefer to not have to look through everything I have. Plus, that makes this section unnecessarily long.
+                <h4 id="antisdk-d">D. Why They Are Usually Harmless</h4>
+                They are usually harmless because they do shit like what you just saw in <a href="#antisdk-c">"Memes Of SDKcord"</a>. It is very easy to win a fight against people who literally have dreams about people who they haven't talked to for like 3-4 months, whom complied because they were literally forced to because they don't want to get banned. Seriously, yaynikki shouldn't be acting like this. This is the funniest shit I've ever seen.
+                <br><br>
+                I thought I had to troll this Discord by stirring shit up occasionally to get them to mald, however it seems that I do not. In fact, they get mad at themselves. They're essentially that one meme where the person makes an imaginary bad-guy then gets scared at that bad-guy. All I am saying is that SDK is currently fucked, we need to fix it, and I simply say it in a rather extreme way.
+                <br><br>
+                Why? It is because I know people on my side will listen almost no-matter what as they know the whole thing is fucked and we want to save it, however I also know that by stirring shit up with the SDK Discord server, you can get tons of entertainment out of it and these people will take every word without a grain of salt apparently. Thats why they want to shut up about me, but never do even after months. The stuff they complain about is why I even managed to get to my position.
+                <br><br>
+                If the people against me were actually sane, I wouldn't have anywhere near as much support. However, when the average admin literally uses them having a bad dream about me as a sort of way to say I'm just so mean, their side can't be taken seriously. Thus if I don't get banned, I always win in the end. And if it were as easy as simply making a new TDK/Venith group to be back to normal, I would've won so easily that I wouldn't even have to follow the rules.
+                <br><br>
+                They are harmless half the time because they are dumbasses, they will always lose because they keep playing into it. The only way to win is to not play into it, but they can't even resist it despite them wanting to. Its like an addiction for them, except they can't admit they're obsessed over it. Remember, I can only win because you let me win. However, I always win whenever you always let me win. Actually stop me, and you'll win.
+                <br><br>
+                Remember, this is only funny because your entire side is a bunch of idiots. The moment you get one person who can do all the work of actually destroying my army, you won essentially the entire war. The whole thing essentially devolves into "I am an edgy-badass and you can't stop me motherfucker, I win everytime and piss you all off". However, you're clearly mad so to win, you gotta make it impossible to be framed as mad.
+                <br><br>
+                You'll never win wanting me banned. If I get banned, I'll make 5 alts with different IPs, usernames, and ways of talking. I'll then start hell through those accounts. You'll never win banning accounts who support my side that go as far as I do, they'll just make new accounts or find other ways to support me. The only ways you'll win is making me look like an idiot or ignoring it. Will any of you actually do that? Probably not, so I'll always win. I'm 5 steps ahead of you, I'll be back in a day. Bans are only good as a threat to make me remove it from SDK, in which I will then just go onto my website(s) to do it or more likely for this case, Telegram.
             </div>
             <div class="footer">2021-2023 <a href="https://digitalcheese.xyz/">Digital Cheese</a>, all rights reserved. If you would like to use any content on this website, please link to the original source assuming it still exists. If it was removed, please link to just the website homepage. Thank you for visiting this webpage!
             </div>
