fixed more elements

--- a/misc/makepaintgreatagain.html
+++ b/misc/makepaintgreatagain.html
@@ -287,8 +287,9 @@
                 <a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a>
                 <br><br>
                 HTML:<br>
-                <textarea readonly="true"><a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a></textarea><br>
-                3DSPaint:
+                <textarea readonly="true"><a href="https://articles.digitalcheese.xyz/misc/makepaintgreatagain.html"><img src="https://articles.digitalcheese.xyz/assets/misc/makepaintgreatagain/mpga-a_1.png" alt="Make Paint Great Again - Article On DigitalCheese.XYZ" title="Make Paint Great Again"></a></textarea>
+                <br><br>
+                3DSPaint:<br>
                 [FIGURE 19221]
                 <h4 id="mpga-b">B. Ways To Help</h4>
                 1. Share This Manifesto<br>
