--- a/tech/tech-hell.html
+++ b/tech/tech-hell.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta property="og:site_name" content="Digital Cheese's Articles">
-        <meta property="og:title" content="Gen Z/Alpha Technological Hell">
-        <meta property="og:description" content="Gen Z and Gen Alpha are in a technological hell. They have found a way to make the average person unable to know what a file and folder system is, let alone how to actually use the computer for anything useful which allows big corporations and governments to control us all much more easily than ever before.">
+        <meta property="og:title" content="Technological Hell">
+        <meta property="og:description" content="We are in a technological hell. They have found a way to make the average person unable to know what a file and folder system is, let alone how to use computers without having to worry about tracking.">
         <meta property="og:image" content="https://articles.digitalcheese.xyz/assets/dc.jpg">
         <meta property="og:image:alt" content="Digital Cheese">
         <meta property="og:url" content="https://articles.digitalcheese.xyz/tech/tech-hell.html">
         <meta property="og:card" content="summary">
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="Digital Cheese">
-        <meta name="description" content="Gen Z and Gen Alpha are in a technological hell. They have found a way to make the average person unable to know what a file and folder system is, let alone how to actually use the computer for anything useful which allows big corporations and governments to control us all much more easily than ever before.">
+        <meta name="description" content="We are in a technological hell. They have found a way to make the average person unable to know what a file and folder system is, let alone how to use computers without having to worry about tracking.">
         <link rel="shortcut icon" href="/assets/dc.ico">
         <link rel="stylesheet" href="/assets/dc.css">
         <script src="/assets/dc.js"></script>
-        <title>Gen Z/Alpha Technological Hell</title>
+        <title>Technological Hell</title>
         <!-- Other Metadata -->
         <meta property="twitter:creator" content="@DigitalCheeseYT">
         <meta property="twitter:site" content="@DigitalCheeseYT">
