more public-school WIP updates

--- a/political/public-school.html
+++ b/political/public-school.html
@@ -68,14 +68,14 @@
                         <ul><li><a href="#students-a">A. General Advice</a></li>
                             <ul><li><a href="#students-a-1">1. Student Interaction</a></li>
                             <li><a href="#students-a-2">2. Avoiding Teacher Trouble</a></li>
-                            <li><a href="#students-a-3">3. Make Money</a></li></ul>
+                            <li><a href="#students-a-3">3. Make Money</a></li>
+                            <li><a href="#students-a-4">4. Picking The Right Career</a></li></ul>
                         <li><a href="#students-b">B. The Internet + Technology</a></li>
                             <ul><li><a href="#students-b-1">1. Avoid Social Media</a></li>
                             <li><a href="#students-b-2">2. Retaining Internet Privacy</a></li>
                             <li><a href="#students-b-3">3. Technology Basics</a></li>
                             <li><a href="#students-b-4">4. Learn To Code</a></li>
-                            <li><a href="#students-b-5">5. Using Your Devices At School</a></li></ul>
-                        </ul>
+                            <li><a href="#students-b-5">5. Using Your Devices At School</a></li></ul></ul>
                     <li><a href="#notes">Article Notes</a></li>
                         <ul><li><a href="#notes-a">A. Links</a></li>
                         <li><a href="#notes-b">B. Major Edits</a></li></ul>
